--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <header class="header-area">
         <div class="navbar-area navbar-two">
-            <div class="container"></div>
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
