Adding and Styling Programme Section

--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
                             <li class="nav-item mr-2">
                                 <a class="active" id="day-1-tab" data-toggle="tab" href="#day-1" role="tab" aria-controls="day-1" aria-selected="true">
                                     <h4 class="nav-title">Jour 1</h4>
-                                    <span>29 Novembre, 2022</span>
+                                    <span>23 Novembre, 2022</span>
                                 </a>
                             </li>
                             <li class="nav-item ml-2">
                                 <a id="day-2-tab" data-toggle="tab" href="#day-2" role="tab" aria-controls="day-2" aria-selected="false">
                                     <h4 class="nav-title">Jour 2</h4>
-                                    <span>30 Novembre, 2022</span>
+                                    <span>24 Novembre, 2022</span>
                                 </a>
                             </li>
                         </ul>
@@ -300,93 +300,164 @@
                                     <div class="single-event d-md-flex border-bottom mt-30">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>09.00 AM - 11.00 PM</li>
+                                                <li>09.00 AM - 10.00 AM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
-                                            <h4 class="event-title">Web Design Principle and Best Practise</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
-                                            <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmour</li>
-                                            </ul>
-                                        </div>
-                                    </div> <!-- single event -->
-
-                                    <div class="single-event d-md-flex border-bottom">
-                                        <div class="event-image d-flex align-items-center">
-                                            <ul class="event-meta">
-                                                <li>13.00 PM - 15.00 PM</li>
-                                            </ul>
-                                        </div>
-                                        <div class="event-content media-body">
-                                            <h4 class="event-title">15 FREE PRODUCTIVE DESIGN TOOLS</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
-                                            <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmour</li>
-                                            </ul>
+                                            <h4 class="event-title">Accueil des participants</h4>
                                         </div>
                                     </div> <!-- single event -->
 
                                     <div class="single-event d-md-flex">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>16.00 PM - 18.00 PM</li>
+                                                <li>10.00 AM - 11.00 AM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
-                                            <h4 class="event-title">GETTING STARTED WITH SKETCHAPP</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
+                                            <h4 class="event-title">Ouverture et Inauguration officielle des<br> Stands/ Cocktail d’accueil</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex event-bg-color no-hover-conf">
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Conférences plénières</h4>
+                                        </div>
+                                    </div>
+
+                                    <div class="single-event d-md-flex">
+                                        <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmoura</li>
+                                                <li>11.00 AM - 11.40 AM</li>
                                             </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Conférence 1</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>11.40 AM - 12.00 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Débat & Discussion</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>12.00 PM - 12.40 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Conférence 2</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>12.40 PM - 13.00 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Débat & Discussion</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom event-wrapper-pause no-hover">
+                                        <div class="event-image d-flex align-items-center event-time-pause">
+                                            <ul class="event-meta">
+                                                <li>13.00 PM - 14.30 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body event-body-pause">
+                                            <h4 class="event-title event-center-h4">Pause déjeuner</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>14.30 PM - 16.00 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Assemblée Générale du réseau des FabLabs</h4>
+                                            <div class="row">
+                                                <div class="col-4">
+                                                    <p class="text p-3 ml-3">Formations :</p>
+                                                </div>
+                                                <div class="col-8">
+                                                    <ul class="event-list text">
+                                                        <li>Impression 3D</li>
+                                                        <li>Découpe laser</li>
+                                                        <li>Rédaction de brevet</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom event-wrapper-pause no-hover">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>16.00 PM - 16.30 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body event-body-pause">
+                                            <h4 class="event-title event-center-h4">Pause-café</h4>
+                                        </div>
+                                    </div> <!-- single event -->
+
+                                    <div class="single-event d-md-flex border-bottom">
+                                        <div class="event-image d-flex align-items-center">
+                                            <ul class="event-meta">
+                                                <li>16.30 PM - 18.00 PM</li>
+                                            </ul>
+                                        </div>
+                                        <div class="event-content media-body">
+                                            <h4 class="event-title">Visite des Stands & Evaluation des projets</h4>
                                         </div>
                                     </div> <!-- single event -->
                                 </div> <!-- event content -->
                             </div>
                             <div class="tab-pane fade" id="day-2" role="tabpanel" aria-labelledby="day-2-tab">
                                 <div class="event-content pt-40">
-                                    <div class="single-event d-md-flex border-bottom mt-30">
+                                    <div class="single-event d-md-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>09.00 AM - 11.00 PM</li>
+                                                <li>09.30 AM - 12.00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
-                                            <h4 class="event-title">Web Design Principle and Best Practise</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
-                                            <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmour</li>
-                                            </ul>
+                                            <h4 class="event-title">Présentation des projets retenus</h4>
                                         </div>
                                     </div> <!-- single event -->
 
                                     <div class="single-event d-md-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>13.00 PM - 15.00 PM</li>
+                                                <li>12.30 PM - 13.30 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
-                                            <h4 class="event-title">15 FREE PRODUCTIVE DESIGN TOOLS</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
-                                            <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmour</li>
-                                            </ul>
+                                            <h4 class="event-title">Remise des Prix et trophées</h4>
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex">
+                                    <div class="single-event d-md-flex event-wrapper-pause no-hover">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>16.00 PM - 18.00 PM</li>
+                                                <li>13.30 PM - 15.00 PM</li>
                                             </ul>
                                         </div>
-                                        <div class="event-content media-body">
-                                            <h4 class="event-title">GETTING STARTED WITH SKETCHAPP</h4>
-                                            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet minima dolores rerum maiores qui at commodi quas, reprehenderit eius consectetur quae magni molestias veniam, provident illum facere iure libero asperiores!</p>
-                                            <ul class="event-meta">
-                                                <li class="text-warning">Location: Grand Amphi, Blog C, ECOLE NATIONALE DES SCIENCES APPLIQUEES Route d'Azemmoura</li>
-                                            </ul>
+                                        <div class="event-content media-body event-body-pause">
+                                            <h4 class="event-title event-center-h4">Pause déjeuner</h4>
                                         </div>
                                     </div> <!-- single event -->
                                 </div> <!-- event content -->
