adding some css to the programme section to adapte Small screens

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     <!--====== EVENT SCHEDULE PART START ======-->
 
-    <section id="event" class="event-schedule pt-115 pb-130">
+    <section id="event" class="event-schedule pt-115 pb-50">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -281,13 +281,13 @@
                 <div class="col-lg-12">
                     <div class="event-tab mt-60">
                         <ul class="nav justify-content-center align-items-center" id="myTab" role="tablist">
-                            <li class="nav-item mr-2">
+                            <li class="nav-item">
                                 <a class="active" id="day-1-tab" data-toggle="tab" href="#day-1" role="tab" aria-controls="day-1" aria-selected="true">
                                     <h4 class="nav-title">Jour 1</h4>
                                     <span>23 Novembre, 2022</span>
                                 </a>
                             </li>
-                            <li class="nav-item ml-2">
+                            <li class="nav-item">
                                 <a id="day-2-tab" data-toggle="tab" href="#day-2" role="tab" aria-controls="day-2" aria-selected="false">
                                     <h4 class="nav-title">Jour 2</h4>
                                     <span>24 Novembre, 2022</span>
@@ -296,11 +296,11 @@
                         </ul>
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="day-1" role="tabpanel" aria-labelledby="day-1-tab">
-                                <div class="event-content pt-40">
-                                    <div class="single-event d-md-flex border-bottom mt-30">
+                                <div class="event-content ">
+                                    <div class="single-event d-flex border-bottom mt-30">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>09.00 AM - 10.00 AM</li>
+                                                <li>09:00 AM - 10:00 AM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -308,27 +308,27 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex">
+                                    <div class="single-event d-flex">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>10.00 AM - 11.00 AM</li>
+                                                <li>10:00 AM - 11:00 AM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
-                                            <h4 class="event-title">Ouverture et Inauguration officielle des<br> Stands/ Cocktail d’accueil</h4>
+                                            <h4 class="event-title">Ouverture et Inauguration officielle des Stands/ Cocktail d’accueil</h4>
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex event-bg-color no-hover-conf">
+                                    <div class="single-event d-flex event-bg-color no-hover-conf">
                                         <div class="event-content media-body">
                                             <h4 class="event-title">Conférences plénières</h4>
                                         </div>
                                     </div>
 
-                                    <div class="single-event d-md-flex">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>11.00 AM - 11.40 AM</li>
+                                                <li>11:00 AM - 11:40 AM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -336,10 +336,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>11.40 AM - 12.00 PM</li>
+                                                <li>11:40 AM - 12:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -347,10 +347,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>12.00 PM - 12.40 PM</li>
+                                                <li>12:00 PM - 12:40 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -358,10 +358,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>12.40 PM - 13.00 PM</li>
+                                                <li>12:40 PM - 13:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -369,10 +369,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom event-wrapper-pause no-hover">
+                                    <div class="single-event d-flex border-bottom event-wrapper-pause no-hover">
                                         <div class="event-image d-flex align-items-center event-time-pause">
                                             <ul class="event-meta">
-                                                <li>13.00 PM - 14.30 PM</li>
+                                                <li>13:00 PM - 14:30 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body event-body-pause">
@@ -380,19 +380,19 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>14.30 PM - 16.00 PM</li>
+                                                <li>14:30 PM - 16:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
                                             <h4 class="event-title">Assemblée Générale du réseau des FabLabs</h4>
-                                            <div class="row">
-                                                <div class="col-4">
-                                                    <p class="text p-3 ml-3">Formations :</p>
+                                            <div class="d-md-flex">
+                                                <div class="m-3">
+                                                    <p class="text">Formations :</p>
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="">
                                                     <ul class="event-list text">
                                                         <li>Impression 3D</li>
                                                         <li>Découpe laser</li>
@@ -403,10 +403,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom event-wrapper-pause no-hover">
+                                    <div class="single-event d-flex border-bottom event-wrapper-pause no-hover">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>16.00 PM - 16.30 PM</li>
+                                                <li>16:00 PM - 16:30 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body event-body-pause">
@@ -414,10 +414,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>16.30 PM - 18.00 PM</li>
+                                                <li>16:30 PM - 18:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -428,10 +428,10 @@
                             </div>
                             <div class="tab-pane fade" id="day-2" role="tabpanel" aria-labelledby="day-2-tab">
                                 <div class="event-content pt-40">
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>09.30 AM - 12.00 PM</li>
+                                                <li>09:30 AM - 12:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -439,10 +439,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex border-bottom">
+                                    <div class="single-event d-flex border-bottom">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>12.30 PM - 13.30 PM</li>
+                                                <li>12:30 PM - 13:30 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body">
@@ -450,10 +450,10 @@
                                         </div>
                                     </div> <!-- single event -->
 
-                                    <div class="single-event d-md-flex event-wrapper-pause no-hover">
+                                    <div class="single-event d-flex event-wrapper-pause no-hover">
                                         <div class="event-image d-flex align-items-center">
                                             <ul class="event-meta">
-                                                <li>13.30 PM - 15.00 PM</li>
+                                                <li>13:30 PM - 15:00 PM</li>
                                             </ul>
                                         </div>
                                         <div class="event-content media-body event-body-pause">
@@ -473,7 +473,7 @@
 
 <!--====== Let's challenge PART START ======-->
         
-    <section id="challenge" class="features-area pt-115 pb-130 gray-bg border-bottom">
+    <section id="challenge" class="features-area pt-115 pb-80 gray-bg border-bottom">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -483,9 +483,8 @@
                         <p class="text text-justify"><span class="text-danger">Let’s Challenge</span> bénéficie d’une large couverture de la part des médias nationaux pour son succès et focalisation spéciale sur le thème de l’innovation. Cette édition est organisée en partenariat avec l’Agence Universitaire de la Francophonie au Maghreb (AUF), le Réseau Universitaire Marocain des FabLabs (RUMAF) et le soutien ???? de la Fédération Internationale des Associations d’Inventeurs (IFIA).</p>
                     </div> <!-- section title -->
                 </div>
-                <div class="col-lg-4 d-flex align-items-center">
-                    <div class="section-title text-center pb-20">
-                        <!-- <h2 class="title">Let's Challenge</h2> -->
+                <div class="col-lg-4 d-flex justify-content-center align-items-center ">
+                    <div class="section-title challenge-img d-flex justify-content-center">
                         <img src="assets/images/challenge.png" alt="challenge">
                     </div> <!-- section title -->
                 </div>
