--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
                                     </div>
                                     <div class="info-content media-body">
                                         <h6 class="info-title">Adresse e-mail</h6>
-                                        <p class="text">festivalfablab2022ftp</p>
+                                        <p class="text">festival@fablab-ucd.org</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
